pamela-linuxpam-conf/src/snapshots/pamela_linuxpam__tests__int_test_sudo_arch.snap
---
source: src/lib.rs
expression: rules
---
[
    RuleToken {
        do_log: true,
        service: "sudo",
        facility: "auth",
        content: ServiceInclusion {
            method: Include,
            service: "system-auth",
        },
    },
    RuleToken {
        do_log: true,
        service: "sudo",
        facility: "account",
        content: ServiceInclusion {
            method: Include,
            service: "system-auth",
        },
    },
    RuleToken {
        do_log: true,
        service: "sudo",
        facility: "session",
        content: ServiceInclusion {
            method: Include,
            service: "system-auth",
        },
    },
]
